Open firewall for salt.
Also documentation updates, stream-m init script, and fix
a mangled key if inputted from AWS web browser.

--- a/templates/salt-cloud/cloud.profiles.d/debian_ec2_public.conf.tmpl
+++ b/templates/salt-cloud/cloud.profiles.d/debian_ec2_public.conf.tmpl
@@ -6,6 +6,7 @@ ubuntu_ec2_public_media_server:
   ssh_username: ubuntu
   network_interfaces:
     - DeviceIndex: 0
+      SubnetId: {{ default_subnet }}
       PrivateIpAddresses:
         - Primary: True
       allocate_new_eip: True
@@ -23,6 +24,7 @@ ubuntu_ec2_public_media_edge:
   ssh_username: ubuntu
   network_interfaces:
     - DeviceIndex: 0
+      SubnetId: {{ default_subnet }}
       PrivateIpAddresses:
         - Primary: True
       allocate_new_eip: True
