--- a/templates/salt-cloud/cloud.providers.d/ec2-public.conf.tmpl
+++ b/templates/salt-cloud/cloud.providers.d/ec2-public.conf.tmpl
@@ -26,7 +26,7 @@ ec2-public:
   # Optionally configure default region
   #
   location: us-east-1
-  availability_zone: us-east-1d
+  availability_zone: us-east-1a
   # Configure which user to use to run the deploy script. This setting is
   # dependent upon the AMI that is used to deploy. It is usually safer to
   # configure this individually in a profile, than globally. Typical users
